# tdevmon-linux

./: .gitmodules  CMakeLists.txt  CMakeLists_arm.txt  README.txt
devmon/: .gitignore  CMakeLists.txt  changelog.txt  dependencies.cmake  version.cmake
devmon/cmake/: CMakeLists.txt  devmon_config_build.cmake.in  devmon_config_install.cmake.in  import_devmon.cmake
devmon/include/: dm_MachineIface.h  dm_lnx_Monitor.h  dm_lnx_Pch.h  dm_lnx_Protocol.h  dm_win_DeviceMgr.h  dm_win_Monitor.h  dm_win_Pch.h  dm_win_PnpBeacon.h  dm_win_Protocol.h  dm_win_Service.h
devmon/license/: license.rtf  license.txt
devmon/package/: CMakeLists.txt
devmon/src/: CMakeLists.txt
devmon/src/dm_app/: AccessMgr.cpp  AccessMgr.h  CMakeLists.txt  CmdLine.cpp  CmdLine.h  error.h  main.cpp  monitor.cpp  monitor.h  pch.h  pnp.cpp  pnp.h  res.rc  security.cpp  security.h  service.cpp  service.h  stats.cpp  stats.h  version.h.in
devmon/src/dm_lnx_lib/: CMakeLists.txt  dm_lnx_Monitor.cpp  pch.h
devmon/src/dm_lnx_lkm/: CMakeLists.txt  CMakeMakefile.in  Connection.c  Connection.h  Device.c  Device.h  FileNameFilter.c  FileNameFilter.h  HashTable.c  HashTable.h  Hook.c  Hook.h  Makefile.in  ScatterGather.c  ScatterGather.h  lkmUtils.c  lkmUtils.h  module.c  pch.h  stringUtils.c  stringUtils.h  version.h.in
